fix header__btn wrap

--- a/sass/propstore/_header.scss
+++ b/sass/propstore/_header.scss
@@ -65,6 +65,7 @@ header {
 	height: 40px;
 	line-height: 40px;
 	color: $color-font-grey;
+	white-space: nowrap;
 }
 
 .header__settings-divider1,
